migration/example/rewrite-ingress-plugin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rewrtie-ingress
  annotations:
    k8s.apisix.apache.org/plugin-config-name: "rewrite-target"
spec:
  ingressClassName: apisix
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port: 
                  number: 80

##test
##curl --resolve "example.com:32106:192.168.49.2" "http://example.com:32106/"
##输出ip地址
